# perpscreener

./: .env.sample  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  hl.md  requirements.txt
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
app/: main.py
app/core/: config.py
app/routes/: example.py
app/services/: example_service.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
spec/: chart_sse.md  double_top_detection.md  double_top_sse.md
src/: main.rs  state.rs
src/business_logic/: config.rs  double_top.rs  indicators.rs  mod.rs
src/errors/: mod.rs
src/handlers/: chart.rs  double_top.rs  health.rs  mod.rs
src/models/: candle.rs  chart.rs  double_top.rs  mod.rs
src/routes/: double_top.rs  health.rs  mod.rs
src/services/: chart.rs  hyperliquid.rs  mod.rs  monitor.rs  pattern_state.rs
